<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="input_text_hint">Unesi novi grad</string>
    <string name="input_button_name">Dodaj grad</string>
    <string name="alert_city_text">Morate navesti ime grada</string>
    <string name="alert_city_title">Prazno ime grada</string>
    <string name="alert_ok">OK</string>
    <string name="location_text">Lokacija:</string>
    <string name="date_text">Datum:</string>
    <string name="temp_button_name">Temperatura</string>
    <string name="sunrise_button_name">Izlazak i zalazak sunca</string>
    <string name="wind_button_name">Vetar</string>
    <string name="unit_text">Jedinica:</string>
    <string name="temp_text">Temperatura:</string>
    <string name="pressure_text">Pritisak:</string>
    <string name="humidity_text">Vlažnost vazduha:</string>
    <string name="sunrise_up_text">Izlazak sunca:</string>
    <string name="sunrise_down_text">Zalazak sunca:</string>
    <string name="wind_speed_text">Brzina vetra:</string>
    <string name="wind_direction_text">Pravac:</string>
    <string name="update_text">(Last updated)</string>
    <string name="update_description">When clicked application requests new weather data from server</string>
    <string name="stats_text">STATISTIKA</string>
    <string name="stats_last_week_text">Poslednja nedelja:</string>
    <string name="stats_day_text">Dan</string>
    <string name="stats_temp_text">Temperatura</string>
    <string name="stats_pressure_text">Pritisak</string>
    <string name="stats_humidity_text">Vlažnost vazduha</string>
    <string name="stats_monday_text">Ponedeljak</string>
    <string name="stats_tuesday_text">Utorak</string>
    <string name="stats_wednesday_text">Sreda</string>
    <string name="stats_thursday_text">Četvrtak</string>
    <string name="stats_friday_text">Petak</string>
    <string name="stats_saturday_text">Subota</string>
    <string name="stats_sunday_text">Nedelja</string>
    <string name="stats_min_temp_text">Min temperatura:</string>
    <string name="stats_max_temp_text">Max temperatura:</string>
</resources>
