<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_text"
        style="@style/DetailsTheme"/>
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/location_text"
        style="@style/DetailsTheme"/>
    <TextView
        android:id="@+id/day_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_text"
        android:text="@string/day_text"
        style="@style/DetailsTheme"/>
    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_text"
        android:layout_toEndOf="@+id/day_text"
        style="@style/DetailsTheme"/>
    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_below="@+id/day_text"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/temp_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/temp_button_name"
            style="@style/HorizontalBar" />
        <Button
            android:id="@+id/sunrise_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sunrise_button_name"
            style="@style/HorizontalBar" />
        <Button
            android:id="@+id/wind_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/wind_button_name"
            style="@style/HorizontalBar"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button_bar">
    </FrameLayout>
</RelativeLayout>