<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    tools:context=".StatisticsActivity">

    <TextView
        android:id="@+id/stats_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StatsHeaderTheme"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_last_week_text"
        android:layout_marginTop="10sp"
        style="@style/StatsTheme"
        android:textSize="18sp"/>
    <LinearLayout
        android:id="@+id/wetaher_table_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8sp"
        android:weightSum="4">
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_day_text"
            style="@style/StatsTheme"/>
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_temp_text"
            style="@style/StatsTheme"/>
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_pressure_text"
            style="@style/StatsTheme"/>
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_humidity_text"
            style="@style/StatsTheme"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/stats_monday"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_monday_text"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_monday_temp"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_monday_pressure"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_monday_humidity"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/stats_tuesday"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_tuesday_text"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_tuesday_temp"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_tuesday_pressure"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_tuesday_humidity"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/stats_wednesday"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_wednesday_text"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_wednesday_temp"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_wednesday_pressure"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_wednesday_humidity"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/stats_thursday"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_thursday_text"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_thursday_temp"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_thursday_pressure"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_thursday_humidity"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/stats_friday"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_friday_text"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_friday_temp"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_friday_pressure"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_friday_humidity"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/stats_saturday"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_saturday_text"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_saturday_temp"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_saturday_pressure"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_saturday_humidity"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/stats_sunday"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_sunday_text"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_sunday_temp"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_sunday_pressure"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_sunday_humidity"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/StatsTheme"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_marginTop="10sp">
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_min_temp_text"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_min_temp_day"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_min_temp_value"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            style="@style/StatsTheme"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stats_max_temp_text"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_max_temp_day"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            style="@style/StatsTheme"/>
        <TextView
            android:id="@+id/stats_max_temp_value"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            style="@style/StatsTheme"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">
        <ImageButton
            android:id="@+id/stats_cold_days"
            android:layout_width="0sp"
            android:layout_height="100sp"
            android:scaleType="fitStart"
            android:background="@drawable/snowflake"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
        <ImageButton
            android:id="@+id/stats_hot_days"
            android:layout_width="0sp"
            android:layout_height="100sp"
            android:layout_weight="1"
            android:background="@drawable/sun1"/>
    </LinearLayout>
</LinearLayout>